# qq_lenzh_bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  xor_decoder.py
QQ_lenzh_bot/plugins/artist/: __init__.py  generate_image.py
QQ_lenzh_bot/plugins/helper/: __init__.py
QQ_lenzh_bot/plugins/jmcomic/: __init__.py  downloader.py  reflection.py
QQ_lenzh_bot/plugins/mdlatex_render/: __init__.py  renderer.py
