[project]
name = "qq-latexmd-bot"
version = "0.1.0"
description = "qq-latexmd-bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["QQ_lenzh_bot/plugins"]
builtin_plugins = ["echo", "single_session"]
